# end_effector_ros

./: README.md
scripts/: env.sh
src/CAN-SDK/: README.md
src/can_bridge_ros/: README.md  package.xml  setup.py
src/can_bridge_ros/can_bridge_ros/: bridge_node.py
src/can_bridge_ros/config/: dual_bus.yaml  single_bus.yaml
src/gloria_ros/: HARDWARE.md  package.xml
src/gloria_ros/gloria_ros/: gripper_node.py
src/gloria_ros/launch/: gripper.launch.py
src/kwr57_ros/: README.md  package.xml
src/kwr57_ros/kwr57_ros/: ft_sensor_node.py
src/kwr57_ros/launch/: ft_sensor.launch.py
src/robot_bringup/: package.xml
src/robot_bringup/robot_bringup/: nodes.py
